@@ -1,6 +1,6 @@
 # Process this file with autoconf to produce a configure script.
 
-# Copyright 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002
+# Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003
 # Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
@@ -19,7 +19,7 @@
 # 02111-1307, USA.
 
 AC_PREREQ(2.54)
-AC_INIT([GNU Automake], [1.7.2a], [bug-automake@gnu.org])
+AC_INIT([GNU Automake], [1.7.2b], [bug-automake@gnu.org])
 
 AC_CONFIG_SRCDIR(automake.in)
 AC_CONFIG_AUX_DIR(lib)
