@@ -1,4 +1,4 @@
 @set UPDATED 9 February 2003
 @set UPDATED-MONTH February 2003
-@set EDITION 1.7.2a
-@set VERSION 1.7.2a
+@set EDITION 1.7.2b
+@set VERSION 1.7.2b
