@@ -1,4 +1,4 @@
-Bugs fixed in 1.7.2a:
+Bugs fixed in 1.7.2b:
 * Fix stamp files numbering (when using multiple AC_CONFIG_HEADERS).
 * Query distutils for `pythondir' and `pythonexecdir', instead of
   using an hardcoded path.  This should allow builds on 64-bit
