@@ -1,5 +1,7 @@
 2003-02-12  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.in, NEWS: Bump version to 1.7.2b.
+
 	* Makefile.am (maintainer-check): Update the diff check
 	to account for the recent @SHELL@ substitution.
 
